--- a/procurar-fichas.html
+++ b/procurar-fichas.html
@@ -156,7 +156,7 @@
       var boto4Container = document.getElementById("boto4Container");
       if (boto4Container) {
         boto4Container.addEventListener("click", function (e) {
-          window.location.href = "/";
+          window.location.href = "./index.html";
         });
       }
       </script>
