--- a/resultados-busca.html
+++ b/resultados-busca.html
@@ -184,7 +184,7 @@
       var boto4Container = document.getElementById("boto4Container");
       if (boto4Container) {
         boto4Container.addEventListener("click", function (e) {
-          window.location.href = "/";
+          window.location.href = "./index.html";
         });
       }
       </script>
