--- a/criar-ficha.html
+++ b/criar-ficha.html
@@ -263,7 +263,7 @@
       var boto4Container = document.getElementById("boto4Container");
       if (boto4Container) {
         boto4Container.addEventListener("click", function (e) {
-          window.location.href = "/";
+          window.location.href = "./index.html";
         });
       }
       </script>
